testsuite/tests/safeHaskell/unsafeLibs/Dep09.stderr

Dep09.hs:5:1: error:
    GHC.Ptr: Can't be safely imported! The module itself isn't safe.
