testsuite/tests/safeHaskell/unsafeLibs/Dep09.hs
{-# LANGUAGE Haskell2010 #-}
{-# LANGUAGE Safe #-}
module Dep09 where

import GHC.Ptr

bad1 = castFunPtrToPtr

